manifests/namespaces/cloudbees/simple-container-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-container-app
  namespace: cloudbees
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: simple-container-app
  template:
    metadata:
      labels:
        app: simple-container-app
    spec:
      containers:
        - image: swashbuck1r/simple-container-app:0.0.8
          name: simple-container-app
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: simple-container-app
  namespace: cloudbees
  labels:
    app: simple-container-app
spec:
  type: NodePort
  selector:
    app: simple-container-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
